--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -310,7 +310,100 @@ body {
 
 
 body {
-    // opacity: 0;
+
+    // default popup
+    .popup {
+        position: fixed; left: 0; top: 0; z-index: 9999;
+        width: 100%; height: 100%;
+        display: none;
+        &.active {display: block}
+        article {
+            @include fullsize;
+            @include flexCenter;
+            background-color: rgba($color: #000000, $alpha: .5);
+            .form_wrap {
+                width: 540px;
+                background-color: #fff;
+                padding: 30px 50px;
+                form {
+                    position: relative;
+                    #btn_pop_close {
+                        cursor: pointer;
+                        position: absolute; right: 0;top: 0;
+                    }
+                }
+                h2 {
+                    font-size: 20px;
+                    font-weight: bold;
+                    line-height: 1.35;
+                    letter-spacing: -0.4px;
+                    color: #000;
+                    margin-bottom: 30px;
+                }
+            }
+        }
+        &#popup_cmf {
+            .select_wrap {
+                display: flex; flex-direction: column; gap: 6px;
+                border: 1px solid #E5E5E5;
+                padding: 10px;
+                max-height: 190px; overflow: auto;
+                label {
+                    cursor: pointer;
+                    p {
+                        display: flex; align-items: center;justify-content: space-between;
+                        width: 100%;
+                        padding: 11px 20px;
+                        border: 2px solid #E5E5E5;
+                        border-radius: 2px;
+                        color: #999;
+                        font-size: 15px;
+                        line-height: 1.6;
+                        letter-spacing: -0.3px;
+                    }
+                    input[type=radio], img {display: none;}
+                    input[type=radio]:checked + p img {display: block;}
+                    input[type=radio]:checked + p {border: 2px solid #000; color: #000;}
+                }
+            }
+            .new_library {
+                margin-top: 60px;
+                
+                label {
+                    position: relative;
+                    input {
+                        width: 100%;
+                        padding: 11px 20px;
+                        border: 2px solid #E5E5E5;
+                        border-radius: 2px;
+                        font-size: 15px;
+                        line-height: 1.6;
+                        letter-spacing: -0.3px;
+                        &::placeholder {color: #999;}
+                    }
+                    img {
+                        cursor: pointer;
+                        position: absolute; right: 20px; top: 50%; transform: translateY(-50%);
+                    }
+                }
+               
+            }
+            input[type=submit] {
+                @include font-openSans;
+                width: 100%;
+                margin-top: 50px;
+                padding: 13px;
+                background-color: #000;
+                font-size: 15px;
+                font-weight: bold;
+                letter-spacing: -0.3px;
+                color: #fff;
+            }
+        }
+    }
+    // default popup
+
+
     main {
         // INDEX MAIN
         &#main_page {
@@ -341,7 +434,6 @@ body {
                             position: relative;
                             @include fullsize;
                             display: flex; justify-content: center; flex-direction: column;
-
                             figcaption {
                                 position: absolute; left: 0; top: 50%; transform: translateY(-50%);
                                 @include paddingLeft_10;
@@ -818,11 +910,12 @@ body {
                 .sec_tit {
                     position: sticky; top: 70px; z-index: 10;
                     display: flex; flex-wrap: wrap;;
-                    backdrop-filter: blur(4px);
+                    // backdrop-filter: blur(4px);
                     background-color: rgba(255,255,255,0.5);
                     #sec_tab {
                         display: flex; align-items: center; 
                         li {
+                            cursor: pointer;
                             display: flex; align-items: center;
                             margin-right: 30px; 
                             font-size: 15px;
@@ -834,17 +927,15 @@ body {
                         }
                     }
 
-                    .selected_tab {
-                        width: 100%;
-                    }
-
                     #hidden_tab {
                         width: 100%;
                         position: absolute; left: 0; top: calc(100% + 2px); 
                         background-color: #fff;
 
                         .selected_tab {
-                            display: flex; flex-wrap: wrap; gap: 10px;
+                            &.active {display: flex;}
+                            display: none;
+                            flex-wrap: wrap; gap: 10px;
                             padding: 10px 20px;
                             border-bottom: 1px solid #f1f1f1;
                             label {
@@ -872,76 +963,104 @@ body {
                             }
 
                         }
-                        .filter_tab {
-                            padding: 0 30px 20px;
-                            display: flex; flex-wrap: wrap; gap: 20px;
-                            .w_180 {max-width: 180px; width: 100%;}
-                            .w_380 {max-width: 380px; width: 100%;}
-                        }
-                        dl {
-                            dt{
-                                font-size: 14px;
-                                line-height: 4.07;
-                                letter-spacing: -0.28px;
-                                border-bottom: 1px solid #e5e5e5;
-                            }
-                            dd{
-                                margin-top: 20px;
-                                &.color_wrap {
-                                    display: flex; flex-wrap: wrap; gap: 10px; 
-                                    label {
-                                        cursor: pointer;
-                                        position: relative;
-                                        display: inline-block;
-                                        $wh: 24px; width: $wh; height: $wh;
-                                        border: solid 1px #d9d9d9;
-                                        border-radius: 2px;
-                                        input{display: none;}
-                                        span {
-                                            position: relative;
-                                            display: block;
-                                            @include fullsize;
-                                            &::after {
-                                                content: '';
-                                                @include absolute-center; z-index: 3;
-                                                filter: invert(100%);
-                                                opacity: 0;
-                                                width: 6px; height: 6px;
-                                                background: url('../images/common/ico_checked_01.svg')no-repeat center;
+                        form[name=search_frm] {
+                            display: none;
+                            .filter_tab {
+                                padding: 0 30px 20px;
+                                display: flex; flex-wrap: wrap; gap: 20px;
+                                .w_180 {max-width: 180px; width: 100%;}
+                                .w_380 {max-width: 380px; width: 100%;}
+                                dl {
+                                    dt{
+                                        font-size: 14px;
+                                        line-height: 4.07;
+                                        letter-spacing: -0.28px;
+                                        border-bottom: 1px solid #e5e5e5;
+                                    }
+                                    dd{
+                                        margin-top: 20px;
+                                        &.color_wrap {
+                                            display: flex; flex-wrap: wrap; gap: 10px; 
+                                            label {
+                                                cursor: pointer;
+                                                position: relative;
+                                                display: inline-block;
+                                                $wh: 24px; width: $wh; height: $wh;
+                                                border: solid 1px #d9d9d9;
+                                                border-radius: 2px;
+                                                input{display: none;}
+                                                span {
+                                                    position: relative;
+                                                    display: block;
+                                                    @include fullsize;
+                                                    &::after {
+                                                        content: '';
+                                                        @include absolute-center; z-index: 3;
+                                                        filter: invert(100%);
+                                                        opacity: 0;
+                                                        width: 6px; height: 6px;
+                                                        background: url('../images/common/ico_checked_01.svg')no-repeat center;
+                                                    }
+                                                }
+                                                input:checked + span::after {opacity: 1;}
+                                                
+                                                // &::after {
+                                                //     content: '';
+                                                //     opacity: 0;
+                                                //     @include absolute-center;
+                                                //     width: 8px; height: 9px;
+                                                //     background: url('../images/common/ico_checked_01.svg')no-repeat center/contain;
+                                                // }
                                             }
                                         }
-                                        input:checked + span::after {opacity: 1;}
-                                        
-                                        // &::after {
-                                        //     content: '';
-                                        //     opacity: 0;
-                                        //     @include absolute-center;
-                                        //     width: 8px; height: 9px;
-                                        //     background: url('../images/common/ico_checked_01.svg')no-repeat center/contain;
-                                        // }
+                                        &:not(.color_wrap) {
+                                            display: flex; flex-wrap: wrap; gap: 8px;
+                                            label {
+                                                width: 100%;
+                                                &.half {width: calc(50% - 4px);}
+        
+                                                i {
+                                                    margin-right: 12px;
+                                                    &.checkbox {width: 16px; height: 16px;  border-radius: 2px;}
+                                                }
+                                                span {
+                                                    font-size: 14px;
+                                                    line-height: 1.43;
+                                                    letter-spacing: -0.28px;
+                                                    color: #bbb;
+                                                    vertical-align: middle;
+                                                }
+                                                input {display: none;}
+                                                input:checked + i {background-color: #000;border-color: #fff;}
+                                                input:checked ~ span {color: #000;}
+                                            }
+                                        }
                                     }
                                 }
-                                &:not(.color_wrap) {
-                                    display: flex; flex-wrap: wrap; gap: 8px;
-                                    label {
-                                        width: 100%;
-                                        &.half {width: calc(50% - 4px);}
-
-                                        i {
-                                            margin-right: 12px;
-                                            &.checkbox {width: 16px; height: 16px;  border-radius: 2px;}
-                                        }
-                                        span {
-                                            font-size: 14px;
-                                            line-height: 1.43;
-                                            letter-spacing: -0.28px;
-                                            color: #bbb;
-                                            vertical-align: middle;
-                                        }
-                                        input {display: none;}
-                                        input:checked + i {background-color: #000;border-color: #fff;}
-                                        input:checked ~ span {color: #000;}
-                                    }
+                            }
+                        }
+                    }
+                    form[name=save_frm] {
+                        width: 100%; height: 60px;
+                        position: absolute; left: 0; top: 0; z-index: 3;
+                        padding: 20px;
+                        background-color: #000;
+                        display:flex; align-items: center; justify-content: space-between;
+                        p {
+                            font-size: 14px;
+                            letter-spacing: -0.28px;
+                            color: #fff;
+                            a {
+                                @include font-openSans;
+                                padding: 10px 20px;
+                                color: #fff;
+                                font-size: 15px;
+                                letter-spacing: -0.3px;
+                                color: #fff;
+                                &.btn_save {
+                                    color: #000;
+                                    border-radius: 2px;
+                                    background-color: #fff;
                                 }
                             }
                         }
@@ -964,8 +1083,15 @@ body {
                                 .ico_wrap {
                                     position: absolute; right: 0; top: 0;z-index: 1;
                                     display: flex; gap: 5px;
+                                    display: none;
                                     img {
                                         opacity: .4; width: 22px;
+                                    }
+                                    &.save {
+                                        display: block;
+                                        width: 40px; height: 40px;
+                                        background: url('../images/common/ico_save_02_01.svg')no-repeat center;
+                                        &.active {background: url('../images/common/ico_save_02_02.svg')no-repeat center;}
                                     }
                                 }
                                 .img_wrap {
