--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -389,30 +389,25 @@ body {
 strong {font-weight: bold;}
 em, i {font-style: normal;}
 input,button{border-radius: 0; border: none;}
-input:focus, textarea:focus {outline:1px solid #fff;}
+input:focus, textarea:focus {outline:1px solid #fff; border-color: #000 !important;}
 .c_pointer {cursor: pointer;}
 
 
 ion-icon { width: 100%; height: 100%; }
 
 /* scroll_bar */
-/*
-	*::-webkit-scrollbar {display: none;}
-	*::-webkit-scrollbar {width: 5px;}
-	*::-webkit-scrollbar-thumb {background-color: #005baa;}
-	*::-webkit-scrollbar-track {background-color: transparent;} 
- */
+	*::-webkit-scrollbar {width: 4px;}
+	*::-webkit-scrollbar-thumb {background-color: #000; border-radius: 30px;}
+	*::-webkit-scrollbar-track {background-color: #E5E5E5; border-radius: 30px;} 
 /* scroll_bar_iex */
-/*
 	html {
-		scrollbar-width: 3px;
-		scrollbar-track-color: transparent;
-		scrollbar-arrow-color: #fff;
-		scrollbar-base-color: transparent;
-		scrollbar-face-color: #005baa;
+		scrollbar-width: 4px;
+		scrollbar-track-color: #e5e5e5;
+		scrollbar-arrow-color: #000;
+		scrollbar-base-color: #e5e5e5;
+		scrollbar-face-color: #000;
 		overflow-x: hidden;
 	}
-*/
 
 
 /* --------------------Tag-------------------- */
